# perfect-playlist

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF-SPOTIFY-LIVE-TEST.md  LICENSE  README.md  Ralph.ps1  RalphOnce.ps1  SKILL.md  Setup-Ralph.ps1  perfect-playlist-cli-plan.md  pyproject.toml  spotify-exact-cli-plan.md  spotify-secrets.env.example
.codex/: config.toml
.github/workflows/: publish.yml
.ralph/: Ralph.Core.ps1  TASK-EXECUTION-PROMPT.md  config.json
.ralph/scripts/: Ralph.ps1  RalphOnce.ps1  Setup-Ralph.ps1
docs/: CLI-CONTRACT.md  GIT-WORKFLOW.md  IMPLEMENTATION-PLAN.md  LINKEDIN-DRAFT.md  LIVE-QA.md  PRODUCT-AND-LANGUAGE.md  RALPH-SETUP-DECISIONS.md  README-RALPH.md  README.md  TASK-EXECUTION-PROMPT.md
done/: 001-yaml-manifest-support.md  002-playlist-export.md  003-playlist-repair.md  004-setlist-resolve.md  005-resolve-confidence.md  006-manifest-review-gate.md  007-resolve-json-output.md
examples/: create_paradox_playlist.py  final-review-sample.yaml  paradox-tiny-desk.txt  paradox-tiny-desk.yaml
perfect_playlist/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  export.py  io.py  models.py  playlist.py  repair.py  search.py  track_refs.py  verify.py
src/perfect_playlist/: __init__.py  auth.py  cli.py  client.py  errors.py  io.py  models.py  playlist.py  repair.py  resolve.py
src/spotify_exact/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  io.py  models.py  playlist.py  search.py  track_refs.py  verify.py
tests/: Ralph.Core.Smoke.ps1  test_auth.py  test_cli_smoke.py  test_contract_coverage.py  test_export.py  test_io.py  test_manifest.py  test_packaging.py  test_playlist_chunking.py  test_playlist_operations.py  test_public_api.py  test_repair.py  test_resolve.py  test_search.py  test_skill.py  test_sources.py  test_spotify_sources.py  test_track_refs.py  test_track_sequence.py  test_verify.py
tests/integration/: test_spotify_integration.py
