[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotify-exact"
version = "0.1.0"
description = "Deterministic Spotify playlist creation from exact track URIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Devin Thomas" }
]
dependencies = [
  "spotipy>=2.25",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
yaml = [
  "pyyaml>=6.0",
]

[project.scripts]
spotify-exact = "spotify_exact.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

