[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "perfect-playlist"
version = "0.1.0"
description = "Deterministic Spotify playlist creation from exact track URIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Devin Thomas" }
]
keywords = ["spotify", "playlist", "cli", "deterministic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "spotipy>=2.25",
  "python-dotenv>=1.0",
  "requests>=2.25",
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "platformdirs>=4.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
[project.urls]
Homepage = "https://github.com/devin-thomas/perfect-playlist"
Repository = "https://github.com/devin-thomas/perfect-playlist"
Issues = "https://github.com/devin-thomas/perfect-playlist/issues"
Changelog = "https://github.com/devin-thomas/perfect-playlist/blob/main/CHANGELOG.md"

[project.scripts]
perfect-playlist = "perfect_playlist.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["perfect_playlist"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
cache_dir = ".mypy_cache_local"

[[tool.mypy.overrides]]
module = ["spotipy", "spotipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --basetemp=.pytest-tmp -p no:cacheprovider"
